Add heap size limit